添加ear文件扫描相关api